--- a/openai.yaml
+++ b/openai.yaml
@@ -1,6 +1,7 @@
 # 更新时间2024/5/26
 
 # 🔍 Openai
+payload:
   - DOMAIN,browser-intake-datadoghq.com
   - DOMAIN,static.cloudflareinsights.com
   - DOMAIN-SUFFIX,ai.com
