--- a/GV.yaml
+++ b/GV.yaml
@@ -5,3 +5,4 @@ payload:
   - IP-CIDR,74.125.39.0/24
   - IP-CIDR,2001:4860:4864:2::0/64
   - DOMAIN,lens.l.google.com
+  - DOMAIN-SUFFIX,telephony.goog
