--- a/Rustdesk.yaml
+++ b/Rustdesk.yaml
@@ -1,6 +1,7 @@
 # 更新时间2024/5/26
 
 # ☢ Rustdesk
+payload:
   - DOMAIN,rerust.freetun.top
   - DOMAIN-SUFFIX,rerust.freetun.top
   - DOMAIN-SUFFIX,rustdesk.com
