--- a/wechat.yaml
+++ b/wechat.yaml
@@ -1,8 +1,18 @@
 # 更新时间2024/5/30
 
-#📞 wechat
+#✉️ wechat
 payload:
-  - DOMAIN-SUFFIX,telephony.goog
-  - DOMAIN,lens.l.google.com
-  - IP-CIDR,74.125.39.0/24
-  - IP-CIDR,2001:4860:4864:2::0/64
+  - DOMAIN-SUFFIX,dl.wechat.com
+  - DOMAIN-SUFFIX,sglong.wechat.com
+  - DOMAIN-SUFFIX,sgminorshort.wechat.com
+  - DOMAIN-SUFFIX,sgshort.wechat.com
+  - DOMAIN-SUFFIX,tencentmap.wechat.com
+  - IP-CIDR101.32.104.4/32,no-resolve
+  - IP-CIDR101.32.104.41/32,no-resolve
+  - IP-CIDR101.32.104.56/32,no-resolve
+  - IP-CIDR101.32.118.25/32,no-resolve
+  - IP-CIDR101.32.133.16/32,no-resolve
+  - IP-CIDR101.32.133.53/32,no-resolve
+  - IP-CIDR101.32.133.209/32,no-resolve
+  - IP-CIDR129.226.3.47/32,no-resolve
+  - IP-CIDR129.226.107.244/32,no-resolve
