--- a/WeChat.yaml
+++ b/WeChat.yaml
@@ -1,6 +1,6 @@
 # 更新时间2024/5/30
 
-#✉️ wechat
+#✉️ WeChat
 payload:
   - DOMAIN,apd-pcdnwxlogin.teg.tencent-cloud.net
   - DOMAIN,btrace.qq.com
@@ -32,15 +32,15 @@ payload:
   - DOMAIN-SUFFIX,wxapp.tc.qq.com
   - DOMAIN-SUFFIX,wxs.qq.com
   - DOMAIN-SUFFIX,yun-hl.3g.qq.com
-  - IP-CIDR,101.32.104.4/32,no-resolve
-  - IP-CIDR,101.32.104.41/32,no-resolve
-  - IP-CIDR,101.32.104.56/32,no-resolve
-  - IP-CIDR,101.32.118.25/32,no-resolve
-  - IP-CIDR,101.32.133.16/32,no-resolve
-  - IP-CIDR,101.32.133.53/32,no-resolve
-  - IP-CIDR,101.32.133.209/32,no-resolve
-  - IP-CIDR,129.226.3.47/32,no-resolve
-  - IP-CIDR,129.226.107.244/32,no-resolve
-  - IP-CIDR,43.130.194.0/23,DIRECT
-  - IP-CIDR,43.156.192.0/18,DIRECT
+  - IP-CIDR,101.32.104.4/32
+  - IP-CIDR,101.32.104.41/32
+  - IP-CIDR,101.32.104.56/32
+  - IP-CIDR,101.32.118.25/32
+  - IP-CIDR,101.32.133.16/32
+  - IP-CIDR,101.32.133.53/32
+  - IP-CIDR,101.32.133.209/32
+  - IP-CIDR,129.226.3.47/32
+  - IP-CIDR,129.226.107.244/32
+  - IP-CIDR,43.130.194.0/23
+  - IP-CIDR,43.156.192.0/18
   - IP-ASN,132203
