--- a/copilot.yaml
+++ b/copilot.yaml
@@ -5,3 +5,20 @@ payload:
   - DOMAIN-SUFFIX,bing.com
   - DOMAIN-SUFFIX,copilot.microsoft.com
   - DOMAIN,copilot.microsoft.com
+  - DOMAIN,www.bing.com
+  - DOMAIN,gateway.bingviz.microsoft.net
+  - DOMAIN,gateway.bingviz.microsoftapp.net
+  - DOMAIN,in.appcenter.ms
+  - DOMAIN,location.microsoft.com
+  - DOMAIN,odc.officeapps.live.com
+  - DOMAIN,openai-api.arkoselabs.com
+  - DOMAIN,openaicomproductionae4b.blob.core.windows.net
+  - DOMAIN,production-openaicom-storage.azureedge.net
+  - DOMAIN,r.bing.com
+  - DOMAIN,self.events.data.microsoft.com
+  - DOMAIN,services.bingapis.com
+  - DOMAIN,static.cloudflareinsights.com
+  - DOMAIN,sydney.bing.com
+  - DOMAIN,api.msn.com
+  - DOMAIN,api.statsig.com
+  - DOMAIN,assets.msn.com
