--- a/copilot.yaml
+++ b/copilot.yaml
@@ -32,3 +32,10 @@ payload:
   - DOMAIN-SUFFIX,bingsandbox.com
   - DOMAIN-SUFFIX,bingvisualsearch.com
   - DOMAIN-SUFFIX,bingworld.com
+  - DOMAIN-SUFFIX,edgeservices.bing.com
+  - DOMAIN-SUFFIX,d.docs.live.net
+  - DOMAIN-SUFFIX,edge.microsoft.com
+  - DOMAIN-SUFFIX,proteus-assetstore.azurewebsites.net
+  - DOMAIN-SUFFIX,nexusrules.officeapps.live.com
+  - DOMAIN-SUFFIX,functional.events.data.microsoft.com
+  - DOMAIN-SUFFIX,browser.events.data.msn.cn
