--- a/Harmonious.yaml
+++ b/Harmonious.yaml
@@ -2,6 +2,7 @@
 
 # ❌ 和谐
 payload:
+  - DOMAIN,cn.bing.com
   - DOMAIN-SUFFIX,theepochtimes.com
   - DOMAIN-SUFFIX,epochtimes.com
   - DOMAIN-SUFFIX,minghui.org
