--- a/Rustdesk.yaml
+++ b/Rustdesk.yaml
@@ -1,6 +1,6 @@
-# 更新时间2024/5/26
+# 更新时间2024/6/10
 
-# ☢ Rustdesk
+# 🔗 Rustdesk
 payload:
   - DOMAIN,rerust.freetun.top
   - DOMAIN-SUFFIX,rerust.freetun.top
