--- a/Custom_Clash/Custom_Clash.ini
+++ b/Custom_Clash/Custom_Clash.ini
@@ -1,1 +1,76 @@
+#更新时间：2024/6/10 
 
+[custom]
+;dns防泄露
+;多分流规则
+;不要随意改变关键字，否则会导致出错
+
+
+;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=📢 GoogleFCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
+ruleset=🌎 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🔗 Rustdesk,https://raw.githubusercontent.com/zixu5u/Rules/main/Rustdesk.list
+ruleset=❄ Customize,https://raw.githubusercontent.com/zixu5u/Rules/main/Customize.list
+ruleset=🛜 VoWifi,https://raw.githubusercontent.com/zixu5u/Rules/main/VoWifi.list
+ruleset=📞 Google voice,https://raw.githubusercontent.com/zixu5u/Rules/main/GV.list
+ruleset=✉️ WeChat,https://raw.githubusercontent.com/zixu5u/Rules/main/WeChat.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=🔍 OpenAI,https://raw.githubusercontent.com/zixu5u/Rules/main/OpenAI.list
+ruleset=❌ 和谐,https://raw.githubusercontent.com/zixu5u/Rules/main/Harmonious.list
+ruleset=🌐 Copilot,https://raw.githubusercontent.com/zixu5u/Rules/main/Copilot.list
+ruleset=🗄 OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.list
+ruleset=🎞 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=📺 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=📺 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
+ruleset=🐟 漏网之鱼,[]FINAL
+;设置规则标志位
+;设置分组标志位
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]REJECT`[]♻️ 自动选择
+custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔗 Rustdesk`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=❄ Customize`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🛜 VoWifi`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=📞 Google voice`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=✉️ WeChat`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=📲 Telegram`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🔍 OpenAI`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=❌ 和谐`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🌐 Copilot`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🗄 微软云盘`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=📲 Telegram`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🎞 YouTube`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=📢 GoogleFCM`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🌎 Google`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🎥 Netflix`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT🚀 节点选择
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT🚀 节点选择
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+
+;设置分组标志位
+enable_rule_generator=true
+overwrite_original_rules=true
