--- a/Custom_Clash/Custom_Clash.ini
+++ b/Custom_Clash/Custom_Clash.ini
@@ -5,6 +5,7 @@
 ;多分流规则
 ;不要随意改变关键字，否则会导致出错
 
+
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -45,7 +46,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]REJECT`[]♻️ 自动选择
-custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=⚙️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔗 Rustdesk`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=❄ Customize`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
