--- a/Custom_Clash/Custom_Clash.ini
+++ b/Custom_Clash/Custom_Clash.ini
@@ -67,8 +67,8 @@ custom_proxy_group=🍎 Apple`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻
 custom_proxy_group=🎥 Netflix`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT[]🚀 节点选择
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT[]🚀 节点选择
+custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 
 ;设置分组标志位
