--- a/Custom_Clash/Custom_Clash.ini
+++ b/Custom_Clash/Custom_Clash.ini
@@ -57,8 +57,8 @@ custom_proxy_group=📲 Telegram`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]
 custom_proxy_group=🔍 OpenAI`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=❌ 和谐`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=🌐 Copilot`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
-custom_proxy_group=🗄 微软云盘`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=🗄 OneDrive`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
+custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=📲 Telegram`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=🎞 YouTube`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
 custom_proxy_group=📢 GoogleFCM`select`[]DIRECT`[]REJECT`[]🚀 节点选择`[]♻️ 自动选择`[]⚙️ 手动切换
